persons: update OpenAPI documentation
